--- a/css/styles.css
+++ b/css/styles.css
@@ -420,6 +420,7 @@ img {
   border-radius: 50%;
   height: 100%;
   width: 100%;
+  fill: var(--background-color-second);
   transition: background-color var(--transition);
 }
 
@@ -556,6 +557,7 @@ img {
   border-radius: 50%;
   height: 100%;
   width: 100%;
+  fill: var(--background-color-second);
   transition: background-color var(--transition);
 }
 
