--- a/css/styles.css
+++ b/css/styles.css
@@ -249,7 +249,7 @@ img {
       rgba(46, 47, 66, 0.7),
       rgba(46, 47, 66, 0.7)
     ),
-    url(./images/people_office.jpg);
+    url(../images/people_office.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -264,7 +264,7 @@ img {
         rgba(46, 47, 66, 0.7),
         rgba(46, 47, 66, 0.7)
       ),
-      url(./images/people_office@2x.jpg);
+      url(../images/people_office@2x.jpg);
   }
 }
 
