--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ img {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
   position: fixed;
   top: 0;
   left: 0;
@@ -198,6 +199,7 @@ img {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   margin-bottom: 40px;
+  display: block;
 }
 
 .mobile-menu-link {
